Implement collage system redesign (#28)
